@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.universal"
        name="Universal Scraper"
-       version="2.1.6"
+       version="2.1.7"
        provider-name="Olympia, Team XBMC">
   <requires>
-    <import addon="xbmc.metadata" version="1.0"/>
+    <import addon="xbmc.metadata" version="2.1.0"/>
     <import addon="metadata.common.themoviedb.org" version="2.9.0"/>
     <import addon="metadata.common.movieposterdb.com" version="1.0.5"/>
-    <import addon="metadata.common.imdb.com" version="2.2.3"/>
+    <import addon="metadata.common.imdb.com" version="2.7.0"/>
     <import addon="metadata.common.impa.com" version="1.0.3"/>
     <import addon="metadata.common.hdtrailers.net" version="1.0.7"/>
     <import addon="metadata.common.youtubetrailers" version="1.0.4"/>
