@@ -1,3 +1,6 @@
+[B]2.1.7[/B]
+- changed: added 'Short' to search results
+
 [B]2.1.6[/B]
 - fixed: year won't scrape when using TMDb search
 
